<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.MedicamentFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextMedicamentInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="24dp"
        android:background="@color/black_gray"
        android:hint="@string/write_name_medicament"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMedicamentName"
            style="@style/Text.SemiBold18"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextMedicamentDoseLayout"
        style="@style/Text.SemiBold18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:hint="@string/quantity_take_medicament"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="@string/mkg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMedicamentDose"
            style="@style/Text.SemiBold18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveMedicamentInfo"
        style="@style/Button.Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/save_btn"
        android:textAllCaps="false"
        android:enabled="false"
        app:backgroundTint="@color/blue_med"
        app:cornerRadius="16dp" />
</androidx.appcompat.widget.LinearLayoutCompat>